# hf-dataset-selector

./: .gitignore  .readthedocs.yaml  README.md  compute_embeddings.py  compute_leep_and_nce.py  compute_logme.py  compute_taskembs.py  compute_text_embedding.py  config.py  embedding_dataset.py  esm.py  evaluators.py  hfdataset.py  main_esm_logme.py  main_leep_nce_separate.py  main_logme.py  main_taskemb.py  main_textemb.py  main_train_esms.py  main_transfer.py  main_vocoverlap.py  pyproject.toml  requirements.txt  setup.py  trainers.py
dataset_parsing/: __init__.py  check_for_duplicates.py  datasets_info.json  download_datasets.py  load_datasets_info.py  parse_dataset_info.py
docs/: conf.py  hfselect.rst  index.rst  modules.rst  requirements.txt
prediction_phase/: main_esm_logme.py  main_leep_nce_separate.py  main_logme.py  main_taskemb.py  main_textemb.py
preparation_phase/: compute_leep_and_nce.py  compute_logme.py  compute_taskembs.py  compute_textembs.py  compute_vocabulary_overlap.py  main_train_esms.py  main_vocoverlap.py  train_esm.py
report_results/: check_lsm_performance.py  collect_timers.py  create_eval_tables.py  create_top_k_tables.py  time_frozen_transfers.py
src/: README.md
tests/: conftest.py  test_embedding_dataset.py  test_ranking.py
transfer_learning/: main_transfer.py  transfer_learning.py
transformers_taskemb/: configuration_utils.py  file_utils.py  modeling_bert.py  modeling_utils.py
tutorials/: 01_find_datasets.ipynb  02_filter_esms.ipynb  03_train_esm.ipynb  04_advanced_esm_training.ipynb
utils/: eval_utils.py  logging_utils.py  (+3 more)
(+14 files in other folders)
